@@ -4,6 +4,7 @@
 - Fix: Predictive Tuning: Prevent closing the subscription while re-subscribing to it
 - Fix: Error handling for socket read/write operations
 - Improvement: Demux read detects lost backend connection and initiates re-connect
+- Fix: Fix crashes while accessing socket concurrently
 
 8.1.2
 - More IPv6 fixes
